PhraseService/OpenShift/Quote-03-Service-Backend.yaml
apiVersion: v1                          ### Описание Сервиса
kind: Service

# oc apply -f ./PhraseService/OpenShift/Quote-03-Service-Backend.yaml
# oc delete -f ./PhraseService/OpenShift/Quote-03-Service-Backend.yaml

metadata:                               # Имя сервиса
  name: phraseservice-server            # !!! Должен совпадать с именем сервера в nginx.conf
  labels:
    app: quote-app

spec:
  selector:
    app: quote-backend-pod                      #! На поды с какими лейблами будет работать сервис, распространять трафик

  ports:
    - name: http
      protocol: TCP
      port: 3000                          # Какой порт будет на сервисе
      targetPort: 3000                    #!! Порт на поде

  sessionAffinity: None
  type: ClusterIP
